# SDF2

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: core.hpp  form.hpp  operations.hpp  primitives.hpp  sdf2.hpp  stl.hpp
src/core/common/: hash.hpp  tri.hpp
src/core/form/: form.hpp
src/core/form/binary/: difference.hpp  intersection.hpp  union.hpp
src/core/form/boolean/: difference.hpp  intersection.hpp  union.hpp
src/core/form/complex/: pattern.hpp
src/core/form/primitive/: box.hpp  cylinder.hpp  hex_prism.hpp  prism.hpp  sphere.hpp  torus.hpp
src/core/form/transform/: mirror.hpp  rotate.hpp  rotation.hpp  translate.hpp  translation.hpp
src/core/march/: cube_lut.hpp  march.hpp  march_gpu.hpp
src/core/mesh/: coalesce.hpp  decimate.hpp  stl.hpp
src/examples/: prisms.cpp  shapes.sdf  shapes2.sdf  superblob.cpp  superblob.sdf  wheel.sdf
src/script/: evaluator.hpp  lexer.hpp  parser.hpp  sdf2_script.cpp
src/scripts/: box.cpp  flywheel.hpp  prisms.cpp  superblob.cpp  wheel.cpp
src/tools/: box_bench.cpp  gui.py  script.hpp  stl_viewer.py
tests/: box_bench.cpp  gpu_march_test.cpp
